apps/base/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    # - match: Host(`grafana.local.ruizops.com`)
    #   kind: Rule
    #   services:
    # - name: grafana
    #   port: 80

  # tls:
  #   secretName: grafana-tls
